--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "GymPass style app.",
   "main": "index.js",
-
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
@@ -13,12 +12,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.12.12",
-    "tsup": "^8.0.2",
-    "tsx": "^4.9.4",
-    "typescript": "^5.4.5"
+    "@types/node": "20.12.12",
+    "tsup": "8.0.2",
+    "tsx": "4.9.4",
+    "typescript": "5.4.5"
   },
   "dependencies": {
-    "fastify": "^4.27.0"
+    "dotenv": "16.4.5",
+    "fastify": "4.27.0",
+    "zod": "3.23.8"
   }
 }
